2020-03-03  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.4.1 (checkpoint version)

2020-01-29  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2019-04-19  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2019-02-19  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2019-02-01  Danilo Chang  <ray2501@gmail.com>

    * Makefile.in: Remove workaround for glibc.
      It is not necessary for current LMDB source code.

2019-01-31  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2019-01-20  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2018-09-19  Danilo Chang  <ray2501@gmail.com>

    * generic/lmdb.h: Update LMDB file.

2018-08-06  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2018-06-22  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.4.0 to test

2018-06-12  Danilo Chang  <ray2501@gmail.com>

    * Add command to handle byte array.

2018-06-07  Danilo Chang  <ray2501@gmail.com>

    * generic/tclmdb.c: Add cursor_handle getBinary command to test.
      For "Use byte arrays for keys and values" request.

2018-05-03  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2018-03-27  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2017-11-24  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.6 to test

2017-11-23  Danilo Chang  <ray2501@gmail.com>

    * Merge gahr's solution
      Fix Segfault when you use an env without opening it

2017-11-10  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2017-08-03  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2017-03-24  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2017-01-12  Danilo Chang  <ray2501@gmail.com>
