@@ -1,3 +1,7 @@
+2020-04-28  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/mdb.c: Update LMDB source code.
+
 2020-03-03  Danilo Chang  <ray2501@gmail.com>
 
     * Setup version to v0.4.1 (checkpoint version)
